@@ -30,6 +30,9 @@ bzr-svn 0.5.0~rc2				UNRELEASED
 
    * Cope with unicode filenames in manual file id detection. (#311744)
 
+   * Print proper error message when importing from non-svn repository in 
+     svn-import. (#313817)
+
 bzr-svn 0.5.0~rc1			2008-12-08
 
   CHANGES
